@@ -46,6 +46,7 @@ rdataFromString(NS_CNAME_PTRRecord rec, MyStringTokenizer st, Name origin)
 throws TextParseException
 {
 	rec.target = Name.fromString(st.nextToken(), origin);
+	rec.target.checkAbsolute("read an NS, CNAME, PTR, or similar record");
 	return rec;
 }
 
