@@ -505,6 +505,18 @@ isAbsolute() {
 	return (name[name.length - 1] == 0);
 }
 
+/*
+ * If the name is not absolute, throw an exception.
+ */
+void
+checkAbsolute(String msg) {
+	if (isAbsolute())
+		return;
+	throw new IllegalArgumentException("Attempted to " + msg + " " +
+					   "with a non-absolute name " +
+					   "(" + this + ")");
+}
+
 /**
  * The length of the name.
  */
