@@ -67,7 +67,9 @@ throws TextParseException
 {
 	RPRecord rec = new RPRecord(name, dclass, ttl);
 	rec.mailbox = Name.fromString(st.nextToken(), origin);
+	rec.mailbox.checkAbsolute("read an RP record");
 	rec.textDomain = Name.fromString(st.nextToken(), origin);
+	rec.textDomain.checkAbsolute("read an RP record");
 	return rec;
 }
 
